# liment

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: release.yml
scripts/: dev.sh  package.sh
src/: api.rs  components.rs  config.rs  constants.rs  delegate.rs  icon.rs  main.rs  profile_cache.rs  updater.rs  util.rs  views.rs  watcher.rs
src/platform/linux/: mod.rs  popup.rs  tray.rs
src/platform/macos/: components.rs  delegate.rs  mod.rs  util.rs  views.rs
src/platform/windows/: popup.rs  tray.rs
src/providers/: claude_code.rs  cliproxy_claude.rs  debug.rs  mod.rs
src/providers/cliproxy/: claude.rs  codex.rs  mod.rs
src/ui/: about.rs  components.rs  mod.rs  views.rs
src/utils/: claude_api.rs  codesign.rs  log.rs  macos.rs  mod.rs  notification.rs  time.rs  toml.rs
