[package]
name = "liment"
version = "0.1.2"
edition = "2024"

[lints.clippy]
# Stylistic
self_named_module_files = "deny"
needless_return = "allow"
single_match = "allow"

# Annoying default lints
uninlined_format_args = "allow" # Inconsistency with complex format args
new_without_default = "allow"   # Not all types make sense with default

# Safety
await_holding_invalid_type = "deny"
await_holding_refcell_ref = "deny"
await_holding_lock = "deny"
disallowed_types = "deny"
disallowed_methods = "deny"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev]
opt-level = 1
lto = "off"
codegen-units = 256
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false

[dependencies]
log = { version = "0.4.29" }
simplelog = { version = "0.12.2" }
tap = { version = "1.0.1" }
anyhow = { version = "1.0.101" }
strum = { version = "0.27.2", features = ["derive"] }
clap = { version = "4.5.58", features = ["derive"] }
figment2 = { version = "0.11.4", features = ["toml", "env"] }
secrecy = { version = "0.10.3" }
block2 = { version = "0.6.2" }
dispatch2 = { version = "0.3.0" }
objc2 = { version = "0.6.3" }
objc2-core-foundation = { version = "0.3.2" }
objc2-foundation = { version = "0.3.2", features = ["NSAttributedString", "NSData", "NSDictionary", "NSRange", "NSString"] }
objc2-app-kit = { version = "0.3.2", features = ["NSAlert", "NSAttributedString", "NSButton", "NSColor", "NSControl", "NSGraphics", "NSImage", "NSLayoutAnchor", "NSLayoutConstraint", "NSParagraphStyle", "NSResponder", "NSStackView", "NSStatusBarButton", "NSStringDrawing", "NSView", "NSWindow", "NSWorkspace", "block2", "objc2-core-foundation"] }
objc2-quartz-core = { version = "0.3.2", features = ["objc2-core-graphics", "objc2-core-foundation"] }
security-framework = { version = "3.6.0" }
dirs = { version = "6.0.0" }
edit = { version = "0.1.5" }
fs-err = { version = "3.3.0" }
camino = { version = "1.2.2" }
rgb = { version = "0.8.52" }
jiff = { version = "0.2.20", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde-inline-default = { version = "1.0.1" }
toml_edit = { version = "0.25.1", features = ["serde"] }
documented = { version = "0.9.2" }
ureq = { version = "3.2.0" }
open = "5.3.3"
notify = "9.0.0-rc.2"
